# stream-tablet

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/streamtablet/: MainActivity.kt  StreamActivity.kt
android/app/src/main/java/com/streamtablet/audio/: AudioPlayer.kt  AudioReceiver.kt
android/app/src/main/java/com/streamtablet/calibration/: CalibrationActivity.kt  CalibrationManager.kt
android/app/src/main/java/com/streamtablet/input/: FourFingerGestureDetector.kt  InputHandler.kt
android/app/src/main/java/com/streamtablet/network/: ConnectionManager.kt
android/app/src/main/java/com/streamtablet/video/: AV1Decoder.kt  VideoDecoder.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  activity_stream.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/tools/: cpu_monitor.py  cpu_monitor_ondevice.py
certs/: generate_certs.sh
scripts/: install_deps.sh  run_server.sh
server/: CMakeLists.txt
server/include/stream_tablet/: config.hpp
server/src/: main.cpp  server.cpp  server.hpp
server/src/audio/: audio_backend.cpp  audio_backend.hpp  opus_encoder.cpp  opus_encoder.hpp  pipewire_audio.cpp  pipewire_audio.hpp  pulseaudio_audio.cpp  pulseaudio_audio.hpp
server/src/capture/: capture_backend.hpp  pipewire_capture.cpp  pipewire_capture.hpp  x11_capture.cpp  x11_capture.hpp
server/src/encoder/: cuda_encoder.cpp  cuda_encoder.hpp  encoder_backend.hpp  encoder_factory.cpp  encoder_factory.hpp  vaapi_encoder.cpp  vaapi_encoder.hpp
server/src/input/: coord_transform.cpp  coord_transform.hpp  uinput_backend.cpp  uinput_backend.hpp
server/src/network/: audio_sender.cpp  audio_sender.hpp  control_server.cpp  control_server.hpp  input_receiver.cpp  input_receiver.hpp  video_sender.cpp  video_sender.hpp
server/src/security/: tls_context.cpp  tls_context.hpp
server/src/util/: event_loop.cpp  event_loop.hpp  logger.cpp  logger.hpp
